...

                    <Spinner
                        android:id="@+id/bloodtype_spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/allergies_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/tubercolosis_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
...
                            android:checked="@={patientModel.tuberculosis}" />
                        <CheckBox
                            android:id="@+id/diabetes_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/heart_condition_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
...
                            android:checked="@={patientModel.heartCondition}" />
                        <CheckBox
                            android:id="@+id/gloucoma_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/epilepsy_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
...
                            android:checked="@={patientModel.epilepsy}" />
                        <CheckBox
                            android:id="@+id/alcohol_drug_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/smoker_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
...
                            android:checked="@={patientModel.smoker}" />
                        <CheckBox
                            android:id="@+id/cancer_checkbox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/other_conditions_edit_text"
                            android:drawableStart="@drawable/ic_add_circle_outline_grey_24dp"
                            android:drawablePadding="4dip"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/medication_edit_text"
                            android:drawableStart="@drawable/ic_pills_24dp"
                            android:drawablePadding="6dip"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/height_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/weight_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/gp_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/save_button2"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
...
