<?xml version="1.0" encoding="utf-8"?>
<!--
Paritially adopted from here:
https://github.com/material-components/material-components-android-codelabs/blob/111-complete/kotlin/shipping/app/src/main/res/layout/shipping_info_activity.xml

-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="patientModel"
            type="com.example.hyperionapp.PatientDetails" />
    </data>


<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#FFFFFF"
        app:contentPadding="0dp"
        app:strokeWidth="0dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp"
            app:elevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_grey_24dp"
                    android:drawablePadding="4dip"
                    android:hint="@string/full_name"
                    android:text="@={patientModel.name}"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location_on_grey_24dp"
                    android:drawablePadding="4dip"
                    android:singleLine="true"
                    android:inputType="textPostalAddress"
                    android:imeOptions="actionNext"
                    android:padding="12dp"
                    android:text="@={patientModel.address}"
                    android:hint="@string/address1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address2_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address2_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPostalAddress"
                    android:imeOptions="actionNext"
                    android:padding="12dp"
                    android:text="@={patientModel.address2}"
                    android:hint="@string/address2" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight=".4"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={patientModel.city}"
                        android:hint="@string/city"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:padding="12dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/post_code_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight=".6"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/post_code_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/post_code"
                        android:text="@={patientModel.postCode}"
                        android:imeOptions="actionNext"
                        android:inputType="textCapCharacters"
                        android:padding="12dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_grey_24dp"
                    android:drawablePadding="4dip"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:padding="12dp"
                    android:text="@={patientModel.email}"
                    android:hint="@string/email_address" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dob_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_date_range_grey_24dp"
                    android:drawablePadding="4dip"
                    android:inputType="date"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:padding="12dp"
                    android:hint="@string/dob" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pps_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pps_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_star_of_life_24dp"
                    android:drawablePadding="4dip"
                    android:inputType="textCapCharacters"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:padding="12dp"
                    android:text="@={patientModel.pPSNumber}"
                    android:hint="@string/pps_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/insurance_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/insurance_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_insurance_24dp"
                    android:drawablePadding="4dip"
                    android:inputType="textCapCharacters"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:padding="12dp"
                    android:text="@={patientModel.insurance}"
                    android:hint="@string/insurance_policy_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:backgroundTint="@color/btnGreen2"
                    android:textSize="16dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1.8"
                    android:layout_gravity="end"
                    android:text="@string/save_btn"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:textSize="16dp"
                    android:layout_gravity="end"
                    android:text="@string/clear_all_btn"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />



            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>

</layout>