...
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/symptoms_text"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:drawablePadding="4dip"
                            android:gravity="top"
                            android:hint="@string/syptoms"
                            android:imeOptions="actionNext"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pain_scale"
                            android:textSize="12dp"></TextView>

                        <Spinner
                            android:id="@+id/pain_scale_spinner"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/dropdown_shape_default"
                            android:padding="12dp"
                            android:paddingStart="12dp" />
                    </LinearLayout>
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/condition_duration"
                            android:textSize="12dp"></TextView>

                        <Spinner
                            android:id="@+id/duration_spinner"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/dropdown_shape_default2"
                            android:layout_marginBottom="16dp"
                            android:padding="12dp"
                            android:paddingStart="12dp" />

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/subscribeButton"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
...
